[package]
name = "cspretty"
version = "0.1.3"
authors = ["Knut Hühne <knut@k-nut.eu>"]
edition = "2018"
description = "A simple Content Security Policy pretty printer and syntax highlighter"
license = "MIT"
repository = "https://github.com/k-nut/cspretty"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Install https://github.com/mackwic/colored

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
colored = "2"
regex = "1"
